Style about page and fix some large screen spacing

--- a/app/assets/stylesheets/09-films-index.css
+++ b/app/assets/stylesheets/09-films-index.css
@@ -39,3 +39,9 @@
 .films-index-list-item {
     padding-top: 20px;
 }
+
+@media screen and (min-height: 1250px) {
+    /* .films-index-container {
+        height: 1200px;
+    } */
+}
